--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <li><a href="index.html"><img src="yoga_logo.jpg" alt="Yoga Logo" class="logo"></a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="asanas.html">Asanas</a></li>
-                <li><a href="pranayama.html">Pranamaya</a></li>
+                <li><a href="pranamaya.html">Pranamaya</a></li>
                 <li><a href="meditation.html">Meditation</a></li>
                 <li><a href="kriyas.html">Kriyas</a></li>
                 <li><a href="DailyChallenge.html">Daily Challenge</a></li>
